# aoc

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.template/: solve.py
src/aoc/y2024/day1/part1/: solve.py
src/aoc/y2024/day1/part2/: puzzle.md  solve.py
src/aoc/y2024/day2/part1/: solve.py
src/aoc/y2024/day2/part2/: puzzle.md  solve.py
src/aoc/y2024/day3/part1/: solve.py
src/aoc/y2024/day3/part2/: puzzle.md  solve.py
src/aoc/y2024/day4/part1/: solve.py
src/aoc/y2024/day4/part2/: puzzle.md  solve.py
test/test_aoc/test_y2024/test_day1/test_part1/: test_solve.py
test/test_aoc/test_y2024/test_day1/test_part2/: test_solve.py
test/test_aoc/test_y2024/test_day2/test_part1/: test_solve.py
test/test_aoc/test_y2024/test_day2/test_part2/: test_solve.py
test/test_aoc/test_y2024/test_day3/test_part1/: test_solve.py
test/test_aoc/test_y2024/test_day3/test_part2/: test_solve.py
test/test_aoc/test_y2024/test_day4/test_part1/: test_solve.py
test/test_aoc/test_y2024/test_day4/test_part2/: test_solve.py
